{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 53,
  "lineage": "e51edde1-8b5a-684b-0794-022f8a80dc08",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:149736139555:loadbalancer/app/tf-lb-20201030000613421500000001/a3da2ae87bb416dd",
            "arn_suffix": "app/tf-lb-20201030000613421500000001/a3da2ae87bb416dd",
            "dns_name": "tf-lb-20201030000613421500000001-745452401.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:149736139555:loadbalancer/app/tf-lb-20201030000613421500000001/a3da2ae87bb416dd",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20201030000613421500000001",
            "security_groups": [
              "sg-060e0119b9facccd2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-008e71e0531922984"
              },
              {
                "subnet_id": "subnet-02e5292d22dea7125"
              },
              {
                "subnet_id": "subnet-08c9dbd928dc31335"
              }
            ],
            "subnets": [
              "subnet-008e71e0531922984",
              "subnet-02e5292d22dea7125",
              "subnet-08c9dbd928dc31335"
            ],
            "tags": {
              "Name": "useast1d_wordpress_alb",
              "app_name": "test",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "vpc_id": "vpc-09c2ef1a5c7c8c986",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:149736139555:listener/app/tf-lb-20201030000613421500000001/a3da2ae87bb416dd/dd032698940db26f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:149736139555:targetgroup/tf-20201030002418869100000001/9e354b0c46ba20fb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:149736139555:listener/app/tf-lb-20201030000613421500000001/a3da2ae87bb416dd/dd032698940db26f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:149736139555:loadbalancer/app/tf-lb-20201030000613421500000001/a3da2ae87bb416dd",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:149736139555:targetgroup/tf-20201030002418869100000001/9e354b0c46ba20fb",
            "arn_suffix": "targetgroup/tf-20201030002418869100000001/9e354b0c46ba20fb",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 15,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:149736139555:targetgroup/tf-20201030002418869100000001/9e354b0c46ba20fb",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-20201030002418869100000001",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "useast1d_wordpress_target_group",
              "app_name": "test",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "target_type": "instance",
            "vpc_id": "vpc-09c2ef1a5c7c8c986"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149736139555:security-group/sg-060e0119b9facccd2",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-060e0119b9facccd2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "owner_id": "149736139555",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "useast1d_sg_default",
              "app_name": "test",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "vpc_id": "vpc-09c2ef1a5c7c8c986"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-08f91644e6fda035b",
            "domain": "vpc",
            "id": "eipalloc-0eed369fd089b4efe",
            "network_interface": "eni-0eefe980e60582395",
            "private_dns": "ip-10-0-3-254.ec2.internal",
            "private_ip": "10.0.3.254",
            "public_dns": "ec2-35-169-143-183.compute-1.amazonaws.com",
            "public_ip": "35.169.143.183",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "useast1d_eip_0",
              "app_name": "test",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0dce36001796b2d07",
            "domain": "vpc",
            "id": "eipalloc-0362a90db410b90e8",
            "network_interface": "eni-06d64f99d5e3185fa",
            "private_dns": "ip-10-0-4-163.ec2.internal",
            "private_ip": "10.0.4.163",
            "public_dns": "ec2-52-70-179-143.compute-1.amazonaws.com",
            "public_ip": "52.70.179.143",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "useast1d_eip_1",
              "app_name": "test",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-08166a8510c0f2888",
            "domain": "vpc",
            "id": "eipalloc-07ce54bf8d057e977",
            "network_interface": "eni-028fe1e9e6ed38ce4",
            "private_dns": "ip-10-0-5-37.ec2.internal",
            "private_ip": "10.0.5.37",
            "public_dns": "ec2-34-239-229-100.compute-1.amazonaws.com",
            "public_ip": "34.239.229.100",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "useast1d_eip_2",
              "app_name": "test",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149736139555:internet-gateway/igw-02037978d54d8a136",
            "id": "igw-02037978d54d8a136",
            "owner_id": "149736139555",
            "tags": {
              "Name": "useast1d_igw",
              "app_name": "test",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "vpc_id": "vpc-09c2ef1a5c7c8c986"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eed369fd089b4efe",
            "id": "nat-0fc61cb89b4f8859b",
            "network_interface_id": "eni-0eefe980e60582395",
            "private_ip": "10.0.3.254",
            "public_ip": "35.169.143.183",
            "subnet_id": "subnet-025942ca97aa63f5f",
            "tags": {
              "Name": "useast1d_ngw_0",
              "app_name": "test",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0362a90db410b90e8",
            "id": "nat-082064d76e0212653",
            "network_interface_id": "eni-06d64f99d5e3185fa",
            "private_ip": "10.0.4.163",
            "public_ip": "52.70.179.143",
            "subnet_id": "subnet-03e2cc1d3a7e22652",
            "tags": {
              "Name": "useast1d_ngw_1",
              "app_name": "test",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07ce54bf8d057e977",
            "id": "nat-04b0edf6df7f0b4a8",
            "network_interface_id": "eni-028fe1e9e6ed38ce4",
            "private_ip": "10.0.5.37",
            "public_ip": "34.239.229.100",
            "subnet_id": "subnet-0a24eceaceb928ef4",
            "tags": {
              "Name": "useast1d_ngw_2",
              "app_name": "test",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e52bfc13bc3608ec",
            "owner_id": "149736139555",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fc61cb89b4f8859b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "useast1d_rtb_private",
              "app_name": "test",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "vpc_id": "vpc-09c2ef1a5c7c8c986"
          },
          "dependencies": [
            "module.vpc.aws_eip.private",
            "module.vpc.aws_nat_gateway.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0bc84b52f7874b3d8",
            "owner_id": "149736139555",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-082064d76e0212653",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "useast1d_rtb_private",
              "app_name": "test",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "vpc_id": "vpc-09c2ef1a5c7c8c986"
          },
          "dependencies": [
            "module.vpc.aws_eip.private",
            "module.vpc.aws_nat_gateway.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b280050d53670253",
            "owner_id": "149736139555",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04b0edf6df7f0b4a8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "useast1d_rtb_private",
              "app_name": "test",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "vpc_id": "vpc-09c2ef1a5c7c8c986"
          },
          "dependencies": [
            "module.vpc.aws_eip.private",
            "module.vpc.aws_nat_gateway.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "protected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c2237738b95ee8ce",
            "owner_id": "149736139555",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "useast1d_rtb_protected",
              "app_name": "test",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "vpc_id": "vpc-09c2ef1a5c7c8c986"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0165f4fdfe66ecf4c",
            "owner_id": "149736139555",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "useast1d_rtb_protected",
              "app_name": "test",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "vpc_id": "vpc-09c2ef1a5c7c8c986"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a54221125c08b012",
            "owner_id": "149736139555",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "useast1d_rtb_protected",
              "app_name": "test",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "vpc_id": "vpc-09c2ef1a5c7c8c986"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0590c3813f3844323",
            "owner_id": "149736139555",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02037978d54d8a136",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "useast1d_rtb_public",
              "app_name": "test",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "vpc_id": "vpc-09c2ef1a5c7c8c986"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2564111805c7262",
            "route_table_id": "rtb-0e52bfc13bc3608ec",
            "subnet_id": "subnet-025942ca97aa63f5f"
          },
          "dependencies": [
            "module.vpc.aws_eip.private",
            "module.vpc.aws_nat_gateway.private",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01738f15f611028e4",
            "route_table_id": "rtb-0bc84b52f7874b3d8",
            "subnet_id": "subnet-03e2cc1d3a7e22652"
          },
          "dependencies": [
            "module.vpc.aws_eip.private",
            "module.vpc.aws_nat_gateway.private",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061507938ad60a1bb",
            "route_table_id": "rtb-0b280050d53670253",
            "subnet_id": "subnet-0a24eceaceb928ef4"
          },
          "dependencies": [
            "module.vpc.aws_eip.private",
            "module.vpc.aws_nat_gateway.private",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "protected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0446309f65d931516",
            "route_table_id": "rtb-0c2237738b95ee8ce",
            "subnet_id": "subnet-0ded2b04a7b730858"
          },
          "dependencies": [
            "module.vpc.aws_route_table.protected",
            "module.vpc.aws_subnet.protected",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f036f96f66e145a",
            "route_table_id": "rtb-0165f4fdfe66ecf4c",
            "subnet_id": "subnet-0a6b89828206a9402"
          },
          "dependencies": [
            "module.vpc.aws_route_table.protected",
            "module.vpc.aws_subnet.protected",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5e0b660d517f712",
            "route_table_id": "rtb-0a54221125c08b012",
            "subnet_id": "subnet-08e56878846585bb5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.protected",
            "module.vpc.aws_subnet.protected",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043dea032573a9375",
            "route_table_id": "rtb-0590c3813f3844323",
            "subnet_id": "subnet-02e5292d22dea7125"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed79ef7c6c2f3d79",
            "route_table_id": "rtb-0590c3813f3844323",
            "subnet_id": "subnet-08c9dbd928dc31335"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ce5ebc2690143e7",
            "route_table_id": "rtb-0590c3813f3844323",
            "subnet_id": "subnet-008e71e0531922984"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149736139555:subnet/subnet-025942ca97aa63f5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-025942ca97aa63f5f",
            "map_public_ip_on_launch": false,
            "owner_id": "149736139555",
            "tags": {
              "Name": "useast1d_private_0",
              "app_name": "test",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "vpc_id": "vpc-09c2ef1a5c7c8c986"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149736139555:subnet/subnet-03e2cc1d3a7e22652",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-03e2cc1d3a7e22652",
            "map_public_ip_on_launch": false,
            "owner_id": "149736139555",
            "tags": {
              "Name": "useast1d_private_1",
              "app_name": "test",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "vpc_id": "vpc-09c2ef1a5c7c8c986"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149736139555:subnet/subnet-0a24eceaceb928ef4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0a24eceaceb928ef4",
            "map_public_ip_on_launch": false,
            "owner_id": "149736139555",
            "tags": {
              "Name": "useast1d_private_2",
              "app_name": "test",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "vpc_id": "vpc-09c2ef1a5c7c8c986"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "protected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149736139555:subnet/subnet-0ded2b04a7b730858",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0ded2b04a7b730858",
            "map_public_ip_on_launch": false,
            "owner_id": "149736139555",
            "tags": {
              "Name": "useast1d_protected_0",
              "app_name": "test",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "vpc_id": "vpc-09c2ef1a5c7c8c986"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149736139555:subnet/subnet-0a6b89828206a9402",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.7.0/24",
            "id": "subnet-0a6b89828206a9402",
            "map_public_ip_on_launch": false,
            "owner_id": "149736139555",
            "tags": {
              "Name": "useast1d_protected_1",
              "app_name": "test",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "vpc_id": "vpc-09c2ef1a5c7c8c986"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149736139555:subnet/subnet-08e56878846585bb5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.8.0/24",
            "id": "subnet-08e56878846585bb5",
            "map_public_ip_on_launch": false,
            "owner_id": "149736139555",
            "tags": {
              "Name": "useast1d_protected_2",
              "app_name": "test",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "vpc_id": "vpc-09c2ef1a5c7c8c986"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149736139555:subnet/subnet-02e5292d22dea7125",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-02e5292d22dea7125",
            "map_public_ip_on_launch": true,
            "owner_id": "149736139555",
            "tags": {
              "Name": "useast1d_public_0",
              "app_name": "test",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "vpc_id": "vpc-09c2ef1a5c7c8c986"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149736139555:subnet/subnet-08c9dbd928dc31335",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-08c9dbd928dc31335",
            "map_public_ip_on_launch": true,
            "owner_id": "149736139555",
            "tags": {
              "Name": "useast1d_public_1",
              "app_name": "test",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "vpc_id": "vpc-09c2ef1a5c7c8c986"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149736139555:subnet/subnet-008e71e0531922984",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-008e71e0531922984",
            "map_public_ip_on_launch": true,
            "owner_id": "149736139555",
            "tags": {
              "Name": "useast1d_public_2",
              "app_name": "test",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            },
            "vpc_id": "vpc-09c2ef1a5c7c8c986"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149736139555:vpc/vpc-09c2ef1a5c7c8c986",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08a4ca21da2ab61e4",
            "default_route_table_id": "rtb-040c9f482472be44d",
            "default_security_group_id": "sg-060e0119b9facccd2",
            "dhcp_options_id": "dopt-beacc2c4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": false,
            "id": "vpc-09c2ef1a5c7c8c986",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-040c9f482472be44d",
            "owner_id": "149736139555",
            "tags": {
              "Name": "useast1d_vpc",
              "app_name": "test",
              "environment": "dev",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "sysops"
            }
          }
        }
      ]
    }
  ]
}